--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "node studentserver.js"
   },
   "dependencies": {
+    "all": "^0.0.0",
     "body-parser": "^1.20.2",
+    "bootstrap": "^3.4.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "glob": "^8.1.0",
     "jsdoc": "^4.0.2",
+    "nodemon": "^3.0.1",
     "npm-install-all": "^1.1.21",
     "os": "^0.1.2",
     "swagger-jsdoc": "^6.2.8",
